# upwards

./: .gitignore  Cargo.toml  README.md  build_web.sh  index.html
.cargo/: config.toml
src/: lib.rs  main.rs
web/: index.html  upwards.js
