[package]
name = "upwards"
version = "0.1.0"
edition = "2018"
publish = false
resolver = "2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.dev]
opt-level = 1

[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Dependencies for native only.
wasm-bindgen = "0.2"
rand = "0.8"
colorgrad = "0.5.0"
bevy_kira_audio = {version = "0.5.0", features = ["ogg"]}

# NATIVE
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11", "png"]}

# WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
getrandom = { version = "0.2", features = ["js"] }
bevy_webgl2 = "0.5"
bevy_web_fullscreen = {git = "https://github.com/ostwilkens/bevy_web_fullscreen.git"}

# bevy = { version = "0.5.0", features = ["dynamic"] }
# bevy = {version="0.5.0", default-features=false}
# bevy_webgl2 = { version = "0.5.0", optional = true }
# winit = {version = "0.24.0"}
